VYRKCATG-146: Fixed a desktop layout issue.

--- a/source/themes/custom/gearwrench/styles/libraries/view/new-products.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/view/new-products.scss
@@ -15,11 +15,15 @@
  */
 
 .view-new-products {
+  display: grid;
+
   .view-header {
     @include type-header(h6, black, included);
     @include flex();
     @include flex-x(justify-content, space-between);
 
+    grid-column-start: 1;
+    grid-column-end: 4;
     margin: 0;
     padding: 1rem 0;
 
